DataMapper and DataRepo receive UnitOfWork from constructor